# sxm-client

./: AUTHORS.md  HISTORY.md  LICENSE  Makefile  README.md  conftest.py  dev-requirements.txt  pyproject.toml  readthedocs.yml
docs/: conf.py
src/sxm/: __main__.py  cli.py  client.py  http.py  models.py
sxm/: __main__.py  cli.py  client.py  http.py  models.py
tests/: test_models.py
